enum jpa Status