@@ -1,15 +1,15 @@
 package com.crudzao.service;
 
-import java.util.stream.Collectors;
 import com.crudzao.dto.AulaDTO;
 import com.crudzao.dto.mapper.AulaMapper;
 import com.crudzao.exception.RecordNotFoundException;
-import com.crudzao.model.Aula;
+
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.PathVariable;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.crudzao.repository.AulaRepository;
 
@@ -20,6 +20,7 @@ import jakarta.validation.constraints.Positive;
 @Validated
 @Service
 public class AulaService {
+
   private final AulaRepository aulaRepository;
   private final AulaMapper aulaMapper;
 
@@ -31,10 +32,11 @@ public class AulaService {
   public List<AulaDTO> lista() {
     return aulaRepository.findAll()
         .stream()
-        .map(aulaMapper::toDTO).toList();
+        .map(aulaMapper::toDTO)
+        .collect(Collectors.toList());
   }
 
-  public AulaDTO findById(@PathVariable("id") @NotNull @Positive Long id) {
+  public AulaDTO findById(@NotNull @Positive Long id) {
     return this.aulaRepository.findById(id).map(aulaMapper::toDTO)
         .orElseThrow(() -> new RecordNotFoundException(id));
   }
@@ -47,12 +49,12 @@ public class AulaService {
     return aulaRepository.findById(id)
         .map(recordFound -> {
           recordFound.setNome(aula.nome());
-          recordFound.setCategoria(aula.categoria());
+          recordFound.setCategoria(aulaMapper.convertCategoryValue(aula.categoria()));
           return aulaMapper.toDTO(aulaRepository.save(recordFound));
         }).orElseThrow(() -> new RecordNotFoundException(id));
   }
 
-  public void delete(@PathVariable("id") @NotNull @Positive Long id) {
+  public void delete(@NotNull @Positive Long id) {
     aulaRepository.delete(
         aulaRepository.findById(id).orElseThrow(() -> new RecordNotFoundException(id)));
   }
